[gd_scene load_steps=14 format=3 uid="uid://bgut45mistlp5"]

[ext_resource type="Script" uid="uid://b1cbvcv340xfu" path="res://Sources/candle.gd" id="1_pd0y7"]
[ext_resource type="Texture2D" uid="uid://dh85chrextiho" path="res://Resources/Textures/Misc/Candle-19ed.png" id="1_sngro"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pd0y7"]
radius = 73.756355

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pd0y7"]
radius = 8.0
height = 16.0

[sub_resource type="Curve" id="Curve_pd0y7"]
_data = [Vector2(0, 0.5694913), 0.0, 0.0, 0, 0, Vector2(0.64115614, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_pd0y7"]
offsets = PackedFloat32Array(0, 0.6269737, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.9519737, 0.9519737, 0.9519737, 1, 1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_pd0y7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_mp07u"]
resource_name = "dim"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_swmxd"]
resource_name = "godim"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.6, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8, 9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_sngro"]
resource_name = "idle"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 2, 1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.75),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.3, 0.6, 0.4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mp07u"]
_data = {
&"RESET": SubResource("Animation_pd0y7"),
&"dim": SubResource("Animation_mp07u"),
&"godim": SubResource("Animation_swmxd"),
&"idle": SubResource("Animation_sngro")
}

[sub_resource type="Gradient" id="Gradient_6flmm"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_sngro"]
gradient = SubResource("Gradient_6flmm")
width = 128
height = 128
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.8, 0.1)

[node name="Candle" type="StaticBody2D"]
y_sort_enabled = true
input_pickable = true
script = ExtResource("1_pd0y7")

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_pd0y7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 24)
shape = SubResource("CapsuleShape2D_pd0y7")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(0, -16)
emitting = false
amount = 20
lifetime = 4.0
randomness = 1.0
spread = 180.0
gravity = Vector2(0, -20)
initial_velocity_max = 10.0
scale_amount_min = 6.0
scale_amount_max = 8.0
scale_amount_curve = SubResource("Curve_pd0y7")
color = Color(4.038222, 1.6378694, 2.653879e-05, 1)
color_ramp = SubResource("Gradient_pd0y7")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("1_sngro")
hframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_mp07u")
}
autoplay = "idle"

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-5.2452087e-06, 0)
scale = Vector2(2, 2)
color = Color(1, 0.69803923, 0, 1)
energy = 0.4
texture = SubResource("GradientTexture2D_sngro")

[node name="Start" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Start" to="." method="_on_start_timeout"]
